# raspidevkit

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.ino  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: new_feature.md
.github/workflows/: sync_development.yml
docs/: modules.rst  raspidevkit.devices.rst  raspidevkit.rst
docs/source/: arduino_devices.rst  conf.py  drivers.rst  gpio_devices.rst  index.rst  installation.rst  usage.rst
docs/source/devices/arduino/: button.rst  dht.rst  hall_effect_sensor.rst  led.rst  relay.rst  (+1 more)
raspidevkit/: __init__.py  __interface.py  __logger.py  __machine.py  constants.py  machine.py  machineutils.py  utils.py
raspidevkit/__devices/: __init__.py  arduino.py  sim808.py
raspidevkit/__devices/__arduino/: arduino_led.py
raspidevkit/__devices/__gpio/: button.py  buzzer.py  pir_motion_sensor.py  rgb_led.py
raspidevkit/devices/: __init__.py  arduino.py  base.py
raspidevkit/devices/arduino/: button.py  dht.py  hall_effect_sensor.py  led.py  relay.py  servo_motor.py
raspidevkit/devices/arduino_devices/: servo_motor.py
raspidevkit/devices/gpio/: button.py  buzzer.py  dht_sensor.py  hall_effect_sensor.py  led.py  light_sensor.py  pir_motion_sensor.py  relay.py  rgb_led.py  servo_motor.py  ultrasonic_sensor.py
raspidevkit/devices/i2c/: lcd.py
raspidevkit/devices/serial/: arduino.py  sim808.py
raspidevkit/templates/: .clang-format  arduino_template.ino
tests/: test_arduino.py  test_drivers.py  test_gpio_devices.py
(+17 files in other folders)
